--- a/public/styles.css
+++ b/public/styles.css
@@ -569,12 +569,19 @@ video {
 .pt-14 {
 	padding-top: 3.5rem;
 }
+.pt-24 {
+	padding-top: 6rem;
+}
 .text-center {
 	text-align: center;
 }
 .text-4xl {
 	font-size: 2.25rem;
 	line-height: 2.5rem;
+}
+.text-5xl {
+	font-size: 3rem;
+	line-height: 1;
 }
 .font-bold {
 	font-weight: 700;
